# CoffeeGPU

./: .ccls  .clang-format  .gitignore  CMakeLists.txt  README.md  config.toml.example  fix_permissions.sh  load-cpu-modules-rusty.sh  load-cpu-modules.sh  load-gpu-modules-rusty.sh  submit.lsf.example  summit
docker/: Dockerfile
original/: CMakeLists.txt  Makefile  README.md  input  precomp.sh
original/src/: auxiliary.f90  defs.f90  ffree3D.F90  user_bc_uniform.f90  user_init_loop.f90  user_init_uniform.f90
python/: EBslice.example.py  analysis.example.ipynb  compute_flux.py  datalib.py  datalib_logsph.py  gen_xmf.py
src/: .main.cpp.swp  .user_loop.hpp.swp  CMakeLists.txt  algorithm.f90  boundary_conditions.f90  main-alfven3d.cpp  main-gr-Yee.cpp  main-gr.cpp  main-pulsar2d-cylindrical.cpp  main-pulsar2d-spherical.cpp  main-pulsar3d.cpp  main-tearing.cpp  main-wave.cpp  main.cpp  output.f90  sim_env.cpp  sim_env.h  sim_env_impl.hpp  sim_params.cpp  sim_params.h  user_alfven.hpp  user_alfven_EZ.hpp  user_bc_loop.f90  user_emwave.hpp  user_init.hpp  user_init_EZ.hpp  user_loop.hpp  user_pulsar.hpp  user_pulsar3d.hpp  user_pulsar3d_EZ.hpp  user_pulsar_sph.hpp  user_tearing.hpp  user_wald.hpp  user_wald1.hpp  user_wald2.hpp
src/algorithms/: .field_solver.cu.swp  boundary.cu  boundary.h  damping_boundary.cpp  damping_boundary.h  field_solver.cu  field_solver.h  field_solver_EZ.cpp  field_solver_EZ.cu  field_solver_EZ.h  field_solver_EZ_cylindrical.cu  field_solver_EZ_cylindrical.h  field_solver_EZ_spherical.cpp  field_solver_EZ_spherical.cu  field_solver_EZ_spherical.h  field_solver_gr.cu  field_solver_gr.h  field_solver_gr_EZ.cu  field_solver_gr_EZ.h  field_solver_resistive.cu  field_solver_resistive.h  finite_diff.h  finite_diff_simd.h  interpolation.h  metric.h  metric_cks.cu  metric_cks.h  metric_cks_impl.hpp  metric_sph.cu  metric_sph.h  metric_sph_impl.hpp  pulsar.cpp  pulsar.cu  pulsar.h  pulsar_impl.hpp
src/cuda/: constant_mem.cu  constant_mem.h  constant_mem_func.h  cuda_control.h  cuda_utility.h  sim_env.cpp
src/cuda/data/: multi_array.cu
src/data/: fields.cpp  fields.h  fields_impl.hpp  grid.h  multi_array.cpp  multi_array.cu  multi_array.h  multi_array_impl.hpp  sim_data.cpp  sim_data.h  stagger.h  typedefs.h  vec3.h
src/utils/: data_exporter.cpp  data_exporter.h  hdf_wrapper.cpp  hdf_wrapper.h  hdf_wrapper_impl.hpp  logger.cpp  logger.h  memory.cpp  memory.h  nvproftool.h  simd.h  timer.cpp  timer.h  util_functions.h
tests/: CMakeLists.txt  test_algorithm.cpp  test_array.cu  test_hdf5.cpp  test_interp.cpp  test_mpi.cpp  test_mpi2.cpp  test_multi_array.cpp  test_output.cpp  test_rho.cu  test_stagger.cpp
